
= rufus-tokyo CHANGELOG.txt


== rufus-tokyo - 0.1.5    not yet released

- todo #23849 : moved tests to bacon (spec/)
- todo #23843 : moved from #lib to #clib/#tlib/#dlib (cabinet/tyrant/dystopia)


== rufus-tokyo - 0.1.4    released 2009/02/02

- todo #23780 : hmethods for Rufus::Tokyo::Table


== rufus-tokyo - 0.1.3    released 2009/01/29

- todo : implemented Rufus::Tokyo::Table (and query)
- todo : implemented Rufus::Tokyo::List
- todo : implemented Rufus::Tokyo::Map
- todo : implemented Cabinet#compact_copy
- todo : implemented Cabinet#copy


== rufus-tokyo - 0.1.2    released 2009/01/23

- todo : implemented Cabinet#keys and #values


== rufus-tokyo - 0.1.1    released 2009/01/23

- bug  : fixed dependency, it's ffi not ruby-ffi
- todo : implemented Cabinet#clear


== rufus-tokyo - 0.1.0    released 2009/01/23

- initial release
