@@ -4,8 +4,9 @@
 
 == rufus-tokyo - 0.1.5    not yet released
 
-- todo #23849 : moved tests to bacon (spec/)
-- todo #23843 : moved from #lib to #clib/#tlib/#dlib (cabinet/tyrant/dystopia)
+- todo : implemented Rufus::Tokyo::TyrantTable
+- todo : implemented Rufus::Tokyo::Tyrant
+- todo : moved tests to bacon (spec/)
 
 
 == rufus-tokyo - 0.1.4    released 2009/02/02
